<resources>
    <string name="app_name">m1p9android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_category">Thèmes éducatifs</string>
    <string name="menu_account">Mon compte</string>
    <string name="menu_setting">Paramètres</string>
    <string name="menu_login">Se connecter</string>
    <string name="category_courses">Liste de cours</string>
    <string name="category_course">Détails du cours</string>
    <string name="channel_name">Ludikids Notification Channel</string>
    <string name="channel_description">Ludikids Notification Description</string>
    <string name="preferences_tokenUser">preferences_tokenUser</string>
    <string name="preferences_notifications">preferences_notifications</string>
</resources>