<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kevinandrianasolo.m1p9android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.kevinandrianasolo.m1p9android.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/category_fragment" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.kevinandrianasolo.m1p9android.ui.favorite.FavoriteFragment"
        android:label="@string/menu_favorite"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.kevinandrianasolo.m1p9android.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/setting_fragment" />

    <fragment
        android:id="@+id/nav_category_courses"
        android:name="com.kevinandrianasolo.m1p9android.ui.category_courses.CategoryCoursesFragment"
        android:label="@string/category_courses"
        tools:layout="@layout/setting_fragment" />

    <fragment
        android:id="@+id/nav_course"
        android:name="com.kevinandrianasolo.m1p9android.ui.course.CourseFragment"
        android:label="@string/category_course"
        tools:layout="@layout/course_fragment" />
</navigation>